# rudaq

./: .envrc.template  .gitattributes  .gitignore  AGENTS.md  AGENT_DEFENITIONS.md  AGENT_FLEET_NOTES.md  ARCHITECTURE.md  BD_JULES_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.txt  FINAL_CONSENSUS_REPORT.md  GEMINI.md  HARDWARE_VALIDATION_SUMMARY.md  HDF5_QUICK_REFERENCE.md  JULES.md  MODULES_PANEL_DELIVERY.md  OCTOCODE_TESTING.md  PROJECT_STATE_REPORT.md  README.md  SECURITY.md  SESSION_COMPLETE_SUMMARY.md  V4_DAQ_WORKSPACE_SUMMARY.txt  V4_GUI_INDEX.md  V4_GUI_QUICK_REFERENCE.md  V4_WORKSPACE_FILE_LISTING.txt  build.rs  build_errors.txt  build_errors_10.txt  build_errors_2.txt  build_errors_3.txt  build_errors_4.txt  build_errors_5.txt  build_errors_6.txt  build_errors_7.txt  build_errors_8.txt  build_errors_9.txt  check_log.txt  (+8 more)
crates/daq-bin/: Cargo.toml
crates/daq-bin/src/: main.rs
crates/daq-driver-comedi/: Cargo.toml
crates/daq-driver-comedi/examples/: counter.rs  digital_io.rs  single_read.rs  streaming.rs
crates/daq-driver-comedi/src/: calibration.rs  device.rs  error.rs  factory.rs  lib.rs  multi_channel.rs  streaming.rs  timing.rs
crates/daq-driver-comedi/tests/: analog_loopback.rs  continuous_streaming.rs  counter_rpc_test.rs  eom_power_sweep.rs  eom_rotator_2d_sweep.rs  eom_rotator_wavelength_3d_sweep.rs  hal_compliance.rs  hardware_smoke.rs  waveplate_calibration_4d.rs
crates/daq-driver-generic/: Cargo.toml
crates/daq-driver-generic/src/: driver.rs  factory.rs  lib.rs  script_engine.rs
crates/daq-driver-generic/tests/: integration_tests.rs
crates/daq-driver-mock/: Cargo.toml
crates/daq-driver-mock/src/: lib.rs  mock_camera.rs  mock_daq_output.rs  mock_laser.rs  mock_power_meter.rs  mock_rotator.rs  mock_stage.rs
crates/daq-driver-mock/tests/: integration.rs
crates/daq-driver-pvcam/: Cargo.toml  README.md
crates/daq-driver-pvcam/examples/: arrow_tap.rs  force_reset.rs  list_pvcam_params.rs  validate_hardware.rs
crates/daq-driver-pvcam/pvcam-sys/: build.rs
crates/daq-driver-pvcam/src/: lib.rs
crates/daq-driver-pvcam/tests/: circ_buffer_diagnostic.rs  continuous_acquisition_tier1.rs  driver_test.rs  exp_mode_probe.rs  extended_streaming.rs  features_test.rs  frame_loss_metrics_test.rs  frame_timing_probe.rs  hardware_smoke.rs  liveimage_200_frames.rs  metadata_test.rs  param_availability_test.rs  pyvcam_style_probe.rs  sdk_fast_stream_equiv.rs  stress_1000_frames.rs
crates/daq-driver-red-pitaya/: Cargo.toml  README.md
crates/daq-driver-red-pitaya/src/: driver.rs  lib.rs
crates/daq-driver-thorlabs/: Cargo.toml  README.md
crates/daq-driver-thorlabs/src/: ell14.rs  shared_ports.rs
crates/daq-examples/: Cargo.toml
crates/daq-examples/examples/: eom_power_sweep.rs  parameter_generic_access.rs  polarization_characterization.rhai  remote_stream_test.rs  ring_buffer_demo.rs  ring_buffer_reader_demo.rs  ring_buffer_tap_demo.rs  scripting_demo.rs  waveplate_calibration_4d.rhai
crates/daq-plugin-api/: Cargo.toml
crates/daq-plugin-api/src/: config.rs  lib.rs  loader.rs  metadata.rs  module_ffi.rs  plugin.rs
crates/daq-pool/: Cargo.toml
crates/daq-pool/src/: buffer_pool.rs  frame_data.rs  lib.rs
crates/daq-pool/tests/: allocation_benchmark.rs
v4-daq/: Cargo.toml  DELIVERABLES.md  HARDWARE_VALIDATION_FRAMEWORK.md  TESTING_INDEX.md  TESTING_QUICK_START.md  V2_V4_COEXISTENCE_DELIVERABLES.md
v4-daq/config/: config.example.v4.toml  config.v4.toml
v4-daq/docs/: DAY3_HARDWARE_VALIDATION_COMPLETE.md  HARDWARE_VALIDATION_READY.md  PHASE_1D_GO_NOGO_REVIEW.md  PHASE_1E_GO_NOGO_REVIEW.md  PHASE_2_PROGRESS.md  READY_TO_EXECUTE_ON_HARDWARE.md  SHARED_SERIAL_PORT_IMPLEMENTATION.md  TESTING_INFRASTRUCTURE.md  VISA_SESSION_MANAGER_IMPLEMENTATION.md
v4-daq/docs/architecture/: IMMEDIATE_BLOCKERS.md  IMMEDIATE_BLOCKERS_RESOLVED.md  IMPLEMENTATION_ROADMAP.md  PHASE_1E_IMPLEMENTATION_GUIDE.md  README.md  RISKS_AND_BLOCKERS.md  V2_V4_COEXISTENCE_DESIGN.md  VISA_IMPLEMENTATION_GUIDE.md  VISA_QUICK_REFERENCE.md  VISA_RESEARCH_INDEX.md  VISA_SDK_RESEARCH.md
v4-daq/docs/deployment/: CONFIGURATION_GUIDE.md  CONFIGURATION_REFERENCE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  TROUBLESHOOTING.md  V4_CONFIG_IMPLEMENTATION.md
v4-daq/docs/testing/: FILE_TRANSFER_GUIDE.md  GETTING_STARTED.md  HARDWARE_TESTING_SCRIPTS.sh  HARDWARE_TEST_CHECKLIST.md  HARDWARE_TEST_PREPARATION.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START_HARDWARE_TESTING.md  README.md  README_HARDWARE_TESTING.md  REMOTE_TESTING_GUIDE.md  SSH_ACCESS_GUIDE.md
v4-daq/examples/: generate_test_report.rs  test_config_load.rs  v4_esp300_test_simple.rs  v4_maitai_diagnostic.rs  v4_maitai_hardware_test.rs  v4_newport_hardware_test.rs  v4_pvcam_test_simple.rs  v4_scpi_hardware_test.rs  v4_scpi_hardware_test_simple.rs  visa_session_manager_usage.rs
v4-daq/scripts/: EXECUTE_HARDWARE_TESTS.sh
v4-daq/scripts/hardware_validation/: DELIVERY_CHECKLIST.md  QUICK_START.md  README.md  analyze_results.sh  create_baseline.sh  emergency_stop.sh  run_all_tests.sh  safety_check.sh  verify_hardware.sh
v4-daq/scripts/remote/: deploy_to_maitai.sh  monitor_tests.sh  run_tests_remote.sh
v4-daq/src/: config_v4.rs  lib.rs
v4-daq/src/actors/: data_publisher.rs  esp300.rs  hdf5_storage.rs  instrument_manager.rs  maitai.rs  mod.rs  newport_1830c.rs  pvcam.rs  scpi.rs
v4-daq/src/adapters/: mock.rs  mock_adapter.rs  mod.rs  serial_adapter.rs
v4-daq/src/config/: mod.rs  v4_config.rs
v4-daq/src/gui/: mod.rs  v4_data_bridge.rs  v4_instrument_panel.rs
v4-daq/src/hardware/: mod.rs  pvcam_adapter.rs  serial_adapter_v4.rs  shared_serial_port.rs  visa_adapter_v4.rs  visa_session_manager.rs
v4-daq/src/runtime/: dual_runtime_manager.rs  (+1 more)
v4-daq/tests/: V2_V4_COEXISTENCE_INDEX.md  hardware_validation_test.rs  integration_actors_test.rs  resource_contention_test.rs  shared_serial_port_test.rs  spike_kameo_tokio_coexistence.rs  v4_integration_test.rs  v4_maitai_integration_test.rs  v4_newport_1830c_integration_test.rs  v4_scpi_integration_test.rs  visa_session_manager_test.rs
(+902 files in other folders)
