[package]
name = "v4-daq"
version = "0.1.0"
edition = "2021"
authors = ["Brian Squires <brian@example.com>"]
description = "V4 Architecture - Clean Kameo Actors + Apache Arrow Data + HDF5 Storage"

[dependencies]
# V4 Core Dependencies
kameo = { version = "0.17" }
arrow = { version = "57", features = ["prettyprint", "ipc"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }


# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi"] }
log = "0.4"
env_logger = "0.11"

# Hardware Communication
serialport = { version = "4.3", optional = true }
visa-rs = { version = "0.5", optional = true }

# Data Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
chrono = { version = "0.4", features = ["serde"] }

# HDF5 Storage (optional feature)
hdf5 = { version = "0.8", optional = true }

# GUI (optional feature)
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_plot = { version = "0.29", optional = true }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = { version = "1.21", features = ["std"] }
futures = "0.3"
num-complex = "0.4"
rustfft = "6.2"

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
tempfile = "3.10"

[features]
default = []
v4_only = []
instrument_serial = ["dep:serialport"]
instrument_visa = ["dep:visa-rs"]
storage_hdf5 = ["dep:hdf5"]
gui = ["dep:eframe", "dep:egui", "dep:egui_plot"]
full = ["instrument_serial", "storage_hdf5", "gui"]

[[example]]
name = "v4_newport_hardware_test"
path = "examples/v4_newport_hardware_test.rs"
