[package]
name = "daq-driver-comedi"
version = "0.1.0"
edition = "2021"
description = "Comedi DAQ driver for the rust-daq ecosystem"
license = "MIT OR Apache-2.0"

[dependencies]
# FFI bindings
comedi-sys = { path = "../comedi-sys" }

# Core DAQ traits
common = { path = "../common" }

# Async runtime
tokio = { workspace = true, features = ["sync", "rt", "time"] }
async-trait.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
parking_lot = "0.12"
bitflags = "2"
serde_json.workspace = true
libc = "0.2"

# Factory support
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true
serialport = "4"
hdf5 = { package = "hdf5-metno", version = "0.11.0" }
chrono = { workspace = true, features = ["serde"] }
ndarray = "0.17"

[features]
default = []
# Enable real hardware support (requires comedilib installed)
hardware = ["comedi-sys/comedi-sdk"]

[lints]
workspace = true
