[package]
name = "daq-driver-generic"
version = "0.1.0"
edition = "2021"
description = "Generic config-driven serial driver for rust-daq"

[dependencies]
daq-core = { path = "../daq-core" }
daq-plugin-api = { path = "../daq-plugin-api" }
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex = "1.12.2"
evalexpr = "11"
toml.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "io-util"] }
serialport = "4.3.0"
tokio-serial = "5.4"

[dependencies.rhai]
version = "1.19"
features = ["sync"]
optional = true

[features]
default = []
scripting = ["dep:rhai"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "io-util", "sync"] }
tempfile.workspace = true

[lints]
workspace = true
