[package]
name = "daq-driver-thorlabs"
version = "0.1.0"
edition = "2021"
description = "Thorlabs ELL14 rotation mount driver for rust-daq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheFermiSea/rust-daq"

[dependencies]
# Core dependencies (DriverFactory trait, capabilities)
common = { path = "../common", features = ["serial"] }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "io-util", "rt"] }
async-trait.workspace = true
futures.workspace = true

# Serial communication
tokio-serial = "5.4"
serialport = "4"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Configuration
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

# Concurrency
parking_lot = "0.12"

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
