[package]
name = "rust-daq-gui"
version = "0.1.0"
description = "A Tauri + React GUI for rust-daq"
authors = ["rust-daq contributors"]
license = "MIT"
repository = "https://github.com/yourusername/rust-daq"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true

# gRPC dependencies (reuse from main rust-daq project)
tonic.workspace = true
prost.workspace = true
tokio-stream = "0.1"

# For accessing rust-daq's proto definitions
rust_daq = { path = "../..", features = ["networking"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
